# StocKPickingProject

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline_capture.py
configs/: default.yaml  fast.yaml
docs/: architecture.md  backtest.md  cli_reference.md  configuration.md  data_pipeline.md  data_quality_report.md  features.md  index.md  models.md  paper_alignment_audit.md  quickstart.md
src/: __init__.py  config.py
src/backtest/: __init__.py  metrics.py  portfolio.py  rolling_training.py  transaction_costs.py
src/cli/: __init__.py  main.py
src/data/: caching.py  fundamentals.py  loaders.py  prices.py  universe.py
src/features/: __init__.py  fundamentals.py  preprocessing.py  target.py  technical.py
src/models/: base.py  ensemble.py  linear_models.py  neural_models.py  tree_models.py
src/reports/: __init__.py  charts.py  export.py  shap_analysis.py  tables.py
tests/: diagnose_lstm.py  test_backtest.py  test_features.py  test_lstm_sequences.py  test_shap_analysis.py  test_target.py  validate_paper_alignment.py
